--- a/src/app/pages/page-not-found/page-not-found.page.html
+++ b/src/app/pages/page-not-found/page-not-found.page.html
@@ -4,6 +4,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content >
+  
+    <ion-img class="img_404" src="https://www.initcoms.com/wp-content/uploads/2020/07/404-error-not-found-1.png"></ion-img>
+  
 </ion-content>
