--- a/src/app/pages/movies/movies.page.html
+++ b/src/app/pages/movies/movies.page.html
@@ -6,16 +6,23 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Movies</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content fullscreen>
+  <ion-searchbar [(ngModel)]="searchMovie" (ionChange)="search($event)" placeholder="Search movie"></ion-searchbar>
 
-  <div id="container">
-    <strong>{{movies|async|json}}</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+    <ion-list *ngIf="(movies|async) as movieData">
+      <ion-list-header>
+        Movies
+      </ion-list-header>
+
+      <ion-item *ngFor="let movie of movieData">
+        <ion-avatar slot="start">
+          <img [src]="movie.Poster">
+        </ion-avatar>
+        <ion-label>
+          <h2>{{movie.Title}}</h2>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+ 
 </ion-content>
 
